@@ -14,7 +14,10 @@ IN DEVELOPMENT
 
   INTERNALS:
 
-    * merge now uses iter_changes to calculate changes. (Aaron Bentley)
+    * merge now uses iter_changes to calculate changes, which makes room for
+      future performance increases.  It is also more consistent with other
+      operations that perform comparisons, and reduces reliance on
+      Tree.inventory.  (Aaron Bentley)
 
   TESTING:
 
